--- a/setup.cfg
+++ b/setup.cfg
@@ -1,17 +1,17 @@
 [metadata]
 name = plover_open_url
-version = 0.0.1
-description = Command plugin for Plover to open a URL.
+version = 0.0.2
+description = Command plugin for Plover to open a URL
 long_description = file: README.rst
 author = Nick Markopoulos
 author_email = nsmarkop@gmail.com
-license = GNU General Public License v3 or later (GPLv3+)
+license = MIT
 url = https://github.com/nsmarkop/plover_open_url
 classifiers =
     Development Status :: 4 - Beta
     Environment :: Plugins
     Intended Audience :: End Users/Desktop
-    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
+    License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
@@ -19,8 +19,6 @@ keywords = plover plover_plugin
 
 [options]
 zip_safe = True
-install_requires =
-    plover>=4.0.0.dev6
 py_modules =
     plover_open_url
 
