Minor update to description

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = plover_open_url
 version = 0.0.2
-description = Command plugin for Plover to open a URL
+description = Command plugin for Plover to open a URL, a folder, or files
 long_description = file: README.rst
 author = Nick Markopoulos
 author_email = nsmarkop@gmail.com
